# dev_type

./: .gitignore  AGENTS.md  BUILD.md  CHECKLIST.md  COMMIT_MESSAGE_v1.0.0.txt  COMPLETE.md  DYNAMIC_SETTINGS_COMPLETE.md  DYNAMIC_SETTINGS_SUMMARY.md  DevTypingApp.spec  INCOMPLETE_HIGHLIGHTING_COMPLETE.md  LANGUAGE_ICONS_COMPLETE.md  LICENSE  README.md  RELEASE_NOTES_v1.0.0.md  SETTINGS_EXPANSION_COMPLETE.md  SETTINGS_FIXES_COMPLETE.md  SOUND_SYSTEM_IMPLEMENTATION.md  STATUS.md  THEMES_COMPLETE.md  THEME_IMPLEMENTATION_SUMMARY.md  THEME_QUICK_REFERENCE.md  THEME_SHOWCASE.md  THEME_STATUS.md  TODO.md  TYPING_FIXES_SUMMARY.md  app_description.md  build.bat  build.py  build.sh  data_location.txt  debug_show_typed.py  large_test.py  main.py  org.mehad605.DevType.yml  pyproject.toml  requirements.txt  rules.md  test_allow_continue.py  test_db.py  test_profile_cropper.py  (+4 more)
app/: __init__.py  create_ico.py  demo_data.py  editor_tab.py  file_scanner.py  file_tree.py  generate_icon.py  ghost_manager.py  ghost_replay_widget.py  history_tab.py  icon_manager.py  instant_splash.py  language_cache.py  languages_tab.py  logging_config.py  palettes.py  portable_data.py  profile_manager.py  profile_transition.py  progress_bar_widget.py  session_result_dialog.py  settings.py  shortcuts_tab.py  sound_manager.py  sound_profile_editor.py  sound_volume_widget.py  stats_db.py  stats_display.py  stats_tab.py  theme_data.py  themes.py  toolbar_widgets.py  typing_area.py  typing_engine.py  ui_icons.py  ui_main.py  ui_profile_selector.py  ui_profile_selector_backup.py  ui_profile_widgets.py
(+44 files in other folders)
