[project]
name = "dev-type"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.10.0",
    "pytest>=8.4.2",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pyinstaller>=6.0.0",
    "pillow>=10.0.0",
    "matplotlib>=3.10.8",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
